src/objects/BDR_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Closings_Actual__c</fullName>
        <label>Closings Actual</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closings_Quota__c</fullName>
        <label>Closings Quota</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closings_Var__c</fullName>
        <formula>Closings_Actual__c - Closings_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closings Var</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Apps_Actual__c</fullName>
        <label>Initial Apps Actual</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Apps_Quota__c</fullName>
        <label>Initial Apps Quota</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Apps_Var__c</fullName>
        <formula>Initial_Apps_Actual__c - Initial_Apps_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Apps Var</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOI_Actual__c</fullName>
        <label>LOI Actual</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOI_Quota__c</fullName>
        <label>LOI Quota</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOI_Var__c</fullName>
        <formula>LOI_Actual__c - LOI_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOI Var</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MovementDate__c</fullName>
        <label>Movement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PreQual_Actual__c</fullName>
        <label>PreQual Actual</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreQual_Quota__c</fullName>
        <label>PreQual Quota</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreQual_Var__c</fullName>
        <formula>PreQual_Actual__c -  PreQual_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreQual Var</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qual_Actual__c</fullName>
        <label>Qual Actual</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qual_Quota__c</fullName>
        <label>Qual Quota</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qual_Var__c</fullName>
        <formula>Qual_Actual__c - Qual_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qual Var</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Sheets_Actual__c</fullName>
        <label>Term Sheets Actual</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Sheets_Quota__c</fullName>
        <label>Term Sheets Quota</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Sheets_Var__c</fullName>
        <formula>Term_Sheets_Actual__c -  Term_Sheets_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Sheets Var</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>BDR Metrics</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MM-{0000}</displayFormat>
        <label>BDR Metrics ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BDR Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>